# autodealgenie

./: .env.example  .gitignore  ACCEPT_OFFER_FIXES_SUMMARY.md  AI_STORAGE_ARCHITECTURE.md  API_EXAMPLES.md  ARCHITECTURE.md  AUTHENTICATION.md  CAR_RECOMMENDATION_ENHANCEMENTS.md  CAR_SERVICE_IMPLEMENTATION_SUMMARY.md  CHANGES_SUMMARY.txt  CHAT_REDESIGN_SUMMARY.md  CHAT_UI_DESIGN.md  DASHBOARD_REFACTORING_SUMMARY.md  DEAL_EVALUATION_REFACTORING.md  DEAL_EVALUATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION.md  ENVIRONMENT_VARIABLES.md  ERROR_HANDLING.md  EVALUATION_PIPELINE.md  EVALUATION_TESTING_GUIDE.md  EVALUATION_UX_ENHANCEMENT_SUMMARY.md  FAVORITES_FEATURE.md  FAVORITES_SUMMARY.md  FINANCING_MODULE_FUTURE_IMPROVEMENTS.md  FINANCING_MODULE_SUMMARY.md  FORM_CONTEXT_PROVIDERS.md  FREE_TIER_DEPLOYMENT.md  GCP_DEPLOYMENT.md  GCP_FREE_TIER_MIGRATION.md  GCP_QUICKSTART.md  GCP_TO_FREE_TIER_MIGRATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.txt  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_MIGRATION_SUMMARY.md  (+49 more)
backend/: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.render.example  .env.test  .env.test.example  .pre-commit-config.yaml  CREWAI_MIGRATION_GUIDE.md  DEAL_EVALUATION_PIPELINE.md  DEAL_EVALUATION_SERVICE.md  Dockerfile  Dockerfile.cloudrun  LLM_MODULE_SUMMARY.md  LLM_MODULE_USAGE.md  MONGODB_FIX_SUMMARY.md  MULTI_AGENT_LLM_GUIDE.md  USER_PREFERENCES_SERVICE.md  alembic.ini  cloudbuild.yaml  pyproject.toml  requirements.txt  (+2 more)
(+412 files in other folders)
